# HH_Database

./: README.md  pyproject.toml
src/: config.py  db_manager.py  hh_api.py  main.py  postgres_database.py
